syntax = "proto3";

import "CameraModel.proto";
import "Transform.proto";
import "Session.proto";

package proto;

message LocationMessage {
  int32 dbId = 1;
  CameraModel cameraModel = 2;
  Transform pose = 3;
  Session session = 4;
}
